[package]
name = "my-no-sql-contracts"
version = "0.1.7"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
default = ["payment_settings"]
crypto-deposit-settings-entity = []
price-bridge-settings-entity = []
order-entity = []
convert-pair = []
bid-ask-entity = []
asset-pair-entity = []
asset-entity = []
price-bridge-config = []
price-bridge-instrument-mapping-entity = []
confirm_2fa_codes = []
merchant_callback_settings_override = []
payment_settings = []

[dependencies]
my-no-sql-server-abstractions = { tag = "0.1.1", git = "https://github.com/MyJetTools/my-no-sql-server-abstractions.git" }
my-no-sql-macros = { tag = "0.1.0", git = "https://github.com/MyJetTools/my-no-sql-macros.git" }
rust-extensions = { tag = "0.1.2", git = "https://github.com/MyJetTools/rust-extensions.git" }
serde = { version = "*", features = ["derive"] }
