[package]
name = "my-no-sql-contracts"
version = "0.1.10"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
default = []
crypto-deposit-settings-entity = []
price-bridge-settings-entity = []
order-entity = []
convert-pair = []
bid-ask-entity = []
asset-pair-entity = []
asset-entity = []
price-bridge-config = []
price-bridge-instrument-mapping-entity = []
confirm_2fa_codes = []
merchant_callback_settings_override = []
payment_settings = []

[dependencies]
service-sdk = { tag = "0.2.5", git = "https://github.com/MyJetTools/service-sdk.git", features = [
    "macros",
    "my-nosql-sdk",
] }

serde = { version = "*", features = ["derive"] }
